// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> size 100 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #696f8c;
font-family: "SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
font-size: 10px;
font-weight: 500;
letter-spacing: 0.6px;
line-height: 16px;
margin-bottom: 0px;
margin-top: 0px;
text-transform: uppercase;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_696f8c ub-fnt-fam_b77syt ub-f-wght_500 ub-fnt-sze_10px ub-txt-trns_uppercase ub-ln-ht_16px ub-ltr-spc_0-6px ub-box-szg_border-box"
>
  Heading 100
</h2>
`;

exports[`<Heading /> size 200 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #696f8c;
font-family: "SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
font-size: 12px;
font-weight: 500;
letter-spacing: 0;
line-height: 16px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_696f8c ub-fnt-fam_b77syt ub-f-wght_500 ub-fnt-sze_12px ub-ln-ht_16px ub-ltr-spc_0 ub-box-szg_border-box"
>
  Heading 200
</h2>
`;

exports[`<Heading /> size 300 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
font-size: 12px;
font-weight: 500;
letter-spacing: 0;
line-height: 16px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_b77syt ub-f-wght_500 ub-fnt-sze_12px ub-ln-ht_16px ub-ltr-spc_0 ub-box-szg_border-box"
>
  Heading 300
</h2>
`;

exports[`<Heading /> size 400 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
font-size: 14px;
font-weight: 500;
letter-spacing: -0.05px;
line-height: 18px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_b77syt ub-f-wght_500 ub-fnt-sze_14px ub-ln-ht_18px ub-ltr-spc_-0-05px ub-box-szg_border-box"
>
  Heading 400
</h2>
`;

exports[`<Heading /> size 500 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
font-size: 16px;
font-weight: 600;
letter-spacing: -0.05px;
line-height: 20px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_b77syt ub-f-wght_600 ub-fnt-sze_16px ub-ltr-spc_-0-05px ub-ln-ht_20px ub-box-szg_border-box"
>
  Heading 500
</h2>
`;

exports[`<Heading /> size 600 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "SF UI Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
font-size: 18px;
font-weight: 600;
letter-spacing: -0.07px;
line-height: 24px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_wm9v6k ub-f-wght_600 ub-fnt-sze_18px ub-ln-ht_24px ub-ltr-spc_-0-07px ub-box-szg_border-box"
>
  Heading 600
</h2>
`;

exports[`<Heading /> size 700 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "SF UI Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
font-size: 20px;
font-weight: 600;
letter-spacing: -0.07px;
line-height: 24px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_wm9v6k ub-f-wght_600 ub-fnt-sze_20px ub-ln-ht_24px ub-ltr-spc_-0-07px ub-box-szg_border-box"
>
  Heading 700
</h2>
`;

exports[`<Heading /> size 800 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "SF UI Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
font-size: 24px;
font-weight: 600;
letter-spacing: -0.2px;
line-height: 32px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_wm9v6k ub-f-wght_600 ub-fnt-sze_24px ub-ln-ht_32px ub-ltr-spc_-0-2px ub-box-szg_border-box"
>
  Heading 800
</h2>
`;

exports[`<Heading /> size 900 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "SF UI Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
font-size: 32px;
font-weight: 600;
letter-spacing: -0.2px;
line-height: 40px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_wm9v6k ub-f-wght_600 ub-fnt-sze_32px ub-ln-ht_40px ub-ltr-spc_-0-2px ub-box-szg_border-box"
>
  Heading 900
</h2>
`;
